--- a/assets/sass/base/_font-family.scss
+++ b/assets/sass/base/_font-family.scss
@@ -3,6 +3,6 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
-.helvetica {
-  font-family: 'helvetica neue', helvetica, sans-serif;
-}
+// .helvetica {
+//   font-family: 'helvetica neue', helvetica, sans-serif;
+// }
