--- a/assets/sass/base/_reset.scss
+++ b/assets/sass/base/_reset.scss
@@ -2,6 +2,15 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
+@viewport{
+  zoom: 1.0;
+  width: device-width;
+}
+
+@-ms-viewport {
+  zoom: 1.0;
+  width: device-width;
+}
 
 html {
   box-sizing: border-box;
