--- a/assets/sass/base/_border-color.scss
+++ b/assets/sass/base/_border-color.scss
@@ -1,8 +1,8 @@
-// # background colors
+// # border color
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
 @include make-responsive-rulesets(
-  make-RSON($colors, '.bgc', 'background-color')
+  make-RSON($colors, '.bc', 'border-color')
 );
