--- a/assets/sass/base/_color.scss
+++ b/assets/sass/base/_color.scss
@@ -3,7 +3,6 @@
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-$color-selectors: map-keys($colors);
-$color-values: map-values($colors);
-$color-declarations: map-declarations('color', $color-values);
-@include responsive-rule-set($color-selectors, $color-declarations);
+@include make-responsive-rulesets(
+  make-RSON($colors, '.c', 'color')
+);
