--- a/assets/sass/base/_vertical-align.scss
+++ b/assets/sass/base/_vertical-align.scss
@@ -3,22 +3,46 @@
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-@include responsive-rule-set((
-  'va-top',
-  'va-middle',
-  'va-bottom',
-  'va-t-top',
-  'va-t-bottom',
-  'va-sub',
-  'va-super',
-  'va-baseline',
-), (
-  ('vertical-align': top),
-  ('vertical-align': middle),
-  ('vertical-align': bottom),
-  ('vertical-align': text-top),
-  ('vertical-align': text-bottom),
-  ('vertical-align': sub),
-  ('vertical-align': super),
-  ('vertical-align': baseline),
+@include make-responsive-rulesets((
+  (
+    'selector': '.va-top',
+    'declarations': (
+      vertical-align: top,
+    ),
+  ), (
+    'selector': '.va-middle',
+    'declarations': (
+      vertical-align: middle,
+    ),
+  ), (
+    'selector': '.va-bottom',
+    'declarations': (
+      vertical-align: bottom,
+    ),
+  ), (
+    'selector': '.va-t-top',
+    'declarations': (
+      vertical-align: text-top,
+    ),
+  ), (
+    'selector': '.va-t-bottom',
+    'declarations': (
+      vertical-align: text-bottom,
+    ),
+  ), (
+    'selector': '.va-sub',
+    'declarations': (
+      vertical-align: sub,
+    ),
+  ), (
+    'selector': '.va-sup',
+    'declarations': (
+      vertical-align: super,
+    ),
+  ), (
+    'selector': '.va-baseline',
+    'declarations': (
+      vertical-align: baseline,
+    ),
+  ),
 ));
