--- a/assets/sass/base/_wrapper.scss
+++ b/assets/sass/base/_wrapper.scss
@@ -3,25 +3,30 @@
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-@each $key, $value in $wraps {
-  @include rule-set('wp-#{$key}', (
-    'max-width': $value
-  ));
-}
-
-// # modifiers
-////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////
-
-//////////////////////////////
-// # position
-//////////////////////////////
-@include responsive-rule-set((
-  'wp-right',
-  'wp-left',
-  'wp-center',
-), (
-  ('margin-right': 0, 'margin-left': auto),
-  ('margin-right': auto, 'margin-left': 0),
-  ('margin-right': auto, 'margin-left': auto),
-));
+$wrap-config-RSON: make-RSON($wraps, '.wp', 'max-width');
+$wrap-static-RSON: (
+  (
+    'selector': '.wp-right',
+    'declarations': (
+      margin-right: 0,
+      margin-left: auto,
+    ),
+  ), (
+    'selector': '.wp-left',
+    'declarations': (
+      margin-right: auto,
+      margin-left: 0,
+    ),
+  ), (
+    'selector': '.wp-center',
+    'declarations': (
+      margin-right: auto,
+      margin-left: auto,
+    ),
+  ),
+);
+$full-wrap-RSON: concat-lists(
+  $wrap-config-RSON,
+  $wrap-static-RSON
+);
+@include make-responsive-rulesets($full-wrap-RSON);
