[1.1.30] update functional utility classes
// layout
- update _display with “display flex”
- update grid generation to generate media query grid variants
- add _flex-direction
- add _flex-wrap
- add _order
- add _width
- add _height
// typography
- add _font-render
// theme-ing
- add _background-position
- add _background-repeat
- add _background-size
- add _list
// configuration
- add _debug

--- a/assets/sass/base/_configuration.scss
+++ b/assets/sass/base/_configuration.scss
@@ -16,6 +16,7 @@ $screen-sizes: (
 $wraps: (
   's': 40em,
   'm': 60em,
+  'l': 80em,
   // ...
 );
 
@@ -33,6 +34,8 @@ $spacings: (
 // # typography
 ////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////
+$base-font-size: 100%;
+
 $type-scale: (
   '1': 3em,
   '2': 2.25em,
@@ -88,10 +91,6 @@ $notification-colors: (
 );
 
 $brand-colors: (
-  't-gold': #b79a54,
-  't-red': #e73d3d,
-  't-dark-red': #c73131,
-  't-pale-blue': #f6f7f8,
   // ...
 );
 
